--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <p class="text">Don't have an account? <a href="#">Register</a> </p>
       </form>
     </div>
+    <div>
+      <a href="./50_project/3_project_starter_boilerplate/index.html" target="_blank" rel="Expanding Cards">Expanding Cards</a>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
