--- a/50_project/3_project_starter_boilerplate/index.html
+++ b/50_project/3_project_starter_boilerplate/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-9.fna.fbcdn.net/v/t39.30808-6/322719726_1912114665798164_6847311465252736538_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=9Uj0StfvgCwAX-byvte&_nc_ht=scontent.fsgn5-9.fna&oh=00_AfBgAr2hY6rj59onxg9q61LjoVGlJV3heCjMkvWgo01VMg&oe=652F790A')">
+        <div class="panel active" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill.jpg')">
           <h3>hi, Everyone</h3>
         </div>
-        <div class="panel" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-10.fna.fbcdn.net/v/t39.30808-6/322589512_2037780599752825_7837120355857159812_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=HRQE1KSnG7EAX-Umx5J&_nc_ht=scontent.fsgn5-10.fna&oh=00_AfDvqpzFIFEkQIsn1kCpLlNU79lBFYjPif8I_36MyDrbWQ&oe=652E0E3D')">
+        <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill2.jpg')">
           <h3>Have you a good day</h3>
         </div>
-        <div class="panel" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-14.fna.fbcdn.net/v/t39.30808-6/323437733_556359213175602_2660197691653937678_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YraZB724pYMAX-6tXY_&_nc_ht=scontent.fsgn5-14.fna&oh=00_AfAVR1hVjsj6behG1RSWxsvD79j_WtnPHhnVhWtcMV6YPw&oe=652F5F7B')">
+        <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill3.jpg')">
           <h3>It is just for demo</h3>
         </div>
-        <div class="panel" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-3.fna.fbcdn.net/v/t39.30808-6/322400730_1201760224106289_7931347112836013869_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=VwFg0PJEu14AX_OskAV&_nc_ht=scontent.fsgn5-3.fna&oh=00_AfBhH6ZfhbMUMpraYpPSPjj6cd42GwpbKOfI-chTwPnK9Q&oe=652EDA4A')">
+        <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/phap-su-howl.jpg')">
           <h3>these contents u can skip</h3>
         </div>
-        <div class="panel" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-14.fna.fbcdn.net/v/t39.30808-6/281273240_1433164013771625_6409979757891697914_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=_3tDN_mZMIgAX8opgyf&_nc_ht=scontent.fsgn5-14.fna&oh=00_AfAaoBPM9SCGk8H8CE-RWVCI6XlaTsX2ZQ0sbLGNZ518Nw&oe=652E9458')">
+        <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/nu-phu-thuy-kiki.jpg')">
           <h3>my old class</h3>
         </div>
-        <div class="panel" style="background-color: lightblue; background-image: url('https://scontent.fsgn5-14.fna.fbcdn.net/v/t39.30808-6/280885332_1433164073771619_8136190629860720470_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=ISTFxMuGQP0AX9YpCgS&_nc_ht=scontent.fsgn5-14.fna&oh=00_AfDg0nzxwyZHnaamILcTxLp2VT57SV2g8WO1CiPWDZIQZw&oe=652F5FA4')">
+        <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/gio-thoi-cuc-chill.jpg')">
           <h3>12B2</h3>
         </div>
     </div>
