--- a/index.html
+++ b/index.html
@@ -5,36 +5,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Form Input Wave</title>
+    <title>My Info</title>
+    <style>
+    * {
+        box-sizing: border-box;
+    }
+    body {
+      font-family: "Roboto", sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+      margin: 0;
+
+  }
+    </style>
   </head>
   <body>
     <div class="container">
-      <h1>Please Login</h1>
-      <form>
-        <div class="form-control">
-          <input type="text" required>
-          <label>Email</label>
-          <!-- <label>
-            <span style="transition-delay: 0ms">E</span>
-              <span style="transition-delay: 50ms">m</span>
-              <span style="transition-delay: 100ms">a</span>
-              <span style="transition-delay: 150ms">i</span>
-              <span style="transition-delay: 200ms">l</span>
-        </label> -->
-        </div>
-
-        <div class="form-control">
-          <input type="password" required>
-          <label>Password</label>
-        </div>
-
-        <button class="btn">Login</button>
-
-        <p class="text">Don't have an account? <a href="#">Register</a> </p>
-      </form>
+      <h1>Click the link below to see how to have a happy day.!!</h1>
+      
     </div>
     <div>
-      <a href="./50_project/3_project_starter_boilerplate/index.html" target="_blank" rel="Expanding Cards">Expanding Cards</a>
+      <a href="./50_project/3_project_starter_boilerplate/index.html" target="_blank" rel="Expanding Cards" 
+      style = "
+      background-color: aqua;
+      padding: 20px; 
+      font-size: 50px;
+      ">Click me</a>
     </div>
     <script src="script.js"></script>
   </body>
