create the main website

--- a/50_project/3_project_starter_boilerplate/index.html
+++ b/50_project/3_project_starter_boilerplate/index.html
@@ -9,22 +9,22 @@
 <body>
     <div class="container">
         <div class="panel active" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill.jpg')">
-          <h3>hi, Everyone</h3>
+          <h3>You are loved and cherished</h3>
         </div>
         <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill2.jpg')">
-          <h3>Have you a good day</h3>
+          <h3>Believe in your inner strength</h3>
         </div>
         <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/totoro-chill3.jpg')">
-          <h3>It is just for demo</h3>
+          <h3>Embrace the present moment</h3>
         </div>
         <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/phap-su-howl.jpg')">
           <h3>these contents u can skip</h3>
         </div>
         <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/nu-phu-thuy-kiki.jpg')">
-          <h3>my old class</h3>
+          <h3>Healing takes time; be patient</h3>
         </div>
         <div class="panel" style="background-color: lightblue; background-image: url('../../res/image/Expanding-Cards/gio-thoi-cuc-chill.jpg')">
-          <h3>12B2</h3>
+          <h3>You have the power to overcome</h3>
         </div>
     </div>
 
