--- a/index.html
+++ b/index.html
@@ -1,41 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>My Info</title>
-    <style>
-    * {
-        box-sizing: border-box;
-    }
-    body {
-      font-family: "Roboto", sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
-      margin: 0;
-
-  }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Click the link below to see how to have a happy day.!!</h1>
-      
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Profile</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>
+    <div class="logo">NBAN22</div>
+    <div class="nav-items">
+      <a href="/">Home</a>
+      <a href="/">About</a>
+      <a href="/">Contact</a>
     </div>
-    <div>
-      <a href="./50_project/3_project_starter_boilerplate/index.html" target="_blank" rel="Expanding Cards" 
-      style = "
-      background-color: aqua;
-      padding: 20px; 
-      font-size: 50px;
-      ">Click me</a>
+  </nav>
+  <section class="hero">
+    <div class="hero-container">
+      <div class="column-left">
+        <h1>This is my simple website only</h1>
+        <p>To view some amusing content, click the link below.</p>
+        <button><a href="/50_project/3_project_starter_boilerplate/index.html" target="_blank">Get Started</a></button>
+      </div>
+      <div class="column-right">
+        <img src="res/image/for-main/untitled.svg" alt="change later"
+        class="hero-image">
+      </div>
     </div>
-    <script src="script.js"></script>
-  </body>
+  </section>
+  
+</body>
 </html>
